# whisper-android-demo

./: gradle.properties
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/whisperdemo/: MainActivity.kt
app/src/main/java/com/example/whisperdemo/utils/: TTSUtils.kt
app/src/main/res/layout/: activity_main.xml
